# ege

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  nohup.out
ege/: CMakeLists.txt  asyncLoop.h  controller.h  core.h  debug.h  egeNetwork.h  event.h  game.h  geometry.h  gfx.h  gpo.h  gui.h  loop.h  network.h  resources.h  scene.h  sound.h  tilemap.h  util.h
ege/asyncLoop/: AsyncHandler.cpp  AsyncHandler.h  AsyncLoop.cpp  AsyncLoop.h  AsyncTask.cpp  AsyncTask.h  CMakeLists.txt  ThreadSafeEventLoop.cpp  ThreadSafeEventLoop.h
ege/asyncLoop/tests/: main.cpp
ege/controller/: CMakeLists.txt  ControlObject.cpp  ControlObject.h  ControlPacket.h  Controllable.cpp  Controllable.h  Controller.cpp  Controller.h
ege/core/: AsyncTask.cpp  AsyncTask.h  BasicComponent.h  Behaviour.h  CMakeLists.txt  Clock.cpp  Clock.h  Component.cpp  Component.h  DataManager.cpp  DataManager.h  Event.h  EventArray.h  EventHandler.h  EventLoop.cpp  EventLoop.h  EventTarget.cpp  EventTarget.h  LockingEventArray.h  MainLoop.cpp  MainLoop.h  Progress.h  TickEvent.h  Timer.cpp  Timer.h  TimerEvent.h
ege/core/tests/: async.cpp  behaviours.cpp  main.cpp
ege/debug/: CMakeLists.txt  Dump.cpp  Dump.h  Inspector.cpp  Inspector.h  InspectorNode.cpp  InspectorNode.h  Logger.cpp  Logger.h  Profiler.cpp  Profiler.h  ProfilerSectionStarter.h
ege/debug/tests/: main.cpp
ege/ege3d/: CMakeLists.txt
ege/ege3d/ege3d/: CMakeLists.txt
ege/egeNetwork/: CMakeLists.txt  ClientNetworkController.cpp  ClientNetworkController.h  ControlPacket.cpp  EGEClient.cpp  EGEClient.h  EGEClientConnection.cpp  EGEClientConnection.h  EGEGame.cpp  EGEGame.h  EGEPacket.cpp  EGEPacket.h  EGEPacketConverter.cpp  EGEPacketConverter.h  EGEPacketGenerators.cpp  EGEServer.cpp  EGEServer.h  ServerNetworkController.cpp  ServerNetworkController.h
ege/event/: CMakeLists.txt  DefaultSystemEventHandler.cpp  DefaultSystemEventHandler.h  KeybindManager.cpp  KeybindManager.h  SystemEvent.h  SystemEventHandler.cpp  SystemEventHandler.h  SystemWindow.cpp  SystemWindow.h
ege/game/: CMakeLists.txt  Game.cpp  Game.h
ege/geometry/: CMakeLists.txt  Line.cpp  Line.h  Point.cpp  Point.h  Polygon.h  Shape.cpp  Shape.h  ShapeSet.cpp  ShapeSet.h
ege/gfx/: CMakeLists.txt  DefaultThemeRenderer.cpp  DefaultThemeRenderer.h  RenderStates.cpp  RenderStates.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  Text.cpp  Text.h  ThemeRenderer.cpp  ThemeRenderer.h
ege/gpo/: CMakeLists.txt  GameplayObject.h  GameplayObjectManager.cpp  GameplayObjectManager.h  GameplayObjectRegistry.h  GameplayObjectRegistry.inl
ege/gui/: Animatable.cpp  Animatable.h  Animation.cpp  Animation.h  AnimationEasingFunctions.cpp  AnimationEasingFunctions.h  Button.cpp  Button.h  CMakeLists.txt  CheckBox.cpp  CheckBox.h  ComboBox.cpp  ComboBox.h  CompoundWidget.cpp  CompoundWidget.h  Frame.cpp  Frame.h  GUIGameLoop.cpp  GUIGameLoop.h  GUIResourceManager.cpp  GUIResourceManager.h  GUIScreen.cpp  GUIScreen.h  GameLoop.cpp  GameLoop.h  GroupBox.cpp  GroupBox.h  Label.cpp  Label.h  LayoutElement.cpp  LayoutElement.h  LayoutSize.cpp  LayoutSize.h  ListBox.cpp  ListBox.h  ProgressBar.cpp  ProgressBar.h  RadioButton.cpp  RadioButton.h  RadioGroup.cpp  (+15 more)
ege/loop/: CMakeLists.txt  Clock.cpp  Clock.h  Event.h  EventCast.h  EventHandler.h  EventLoop.cpp  EventLoop.h  EventResult.h  GameLoop.cpp  GameLoop.h  Time.cpp  Time.h  Timer.cpp  Timer.h  TimerEvent.h
ege/main/: Config.cpp  Config.h
ege/network/: CMakeLists.txt  Client.cpp  Client.h  ClientConnection.cpp  ClientConnection.h  NetworkEndpoint.cpp  NetworkEndpoint.h  Packet.cpp  Packet.h  SFMLNetworkImpl.cpp  SFMLNetworkImpl.h  SFMLPacket.cpp  SFMLPacket.h  Server.cpp  Server.h  TcpClient.cpp  TcpClient.h  TcpClientConnection.cpp  TcpClientConnection.h  TcpEndpoint.cpp  TcpEndpoint.h  TcpPacket.cpp  TcpPacket.h  TcpServer.cpp  TcpServer.h
ege/profiler/: CMakeLists.txt  Profiler.cpp  Profiler.h  ProfilerSectionStarter.h
ege/resources/: AtlasTexture.cpp  AtlasTexture.h  CMakeLists.txt  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  SFMLTexture.cpp  SFMLTexture.h  Texture.cpp  Texture.h
ege/scene/: CMakeLists.txt  Camera.cpp  Camera.h  CameraObject.cpp  CameraObject.h  CameraObject2D.cpp  CameraObject2D.h  CirclePart.cpp  CirclePart.h  DummyObject2D.cpp  DummyObject2D.h  ObjectRenderer.cpp  ObjectRenderer.h  Part.cpp  Part.h  PartStub.cpp  PartStub.h  ParticleSystem2D.cpp  ParticleSystem2D.h  PhysicalParticleSystem.cpp  PhysicalParticleSystem.h  PhysicsBehaviour.cpp  PhysicsBehaviour.h  Plain2DCamera.cpp  Plain2DCamera.h  RectanglePart.cpp  RectanglePart.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Scene2D.cpp  Scene2D.h  SceneLoader.cpp  SceneLoader.h  SceneObject.cpp  SceneObject.h  SceneObject2D.cpp  SceneObject2D.h  SceneObjectRegistry.cpp  (+15 more)
ege/sfml/: CMakeLists.txt
ege/sound/: CMakeLists.txt  Sound.cpp  Sound.h  SoundManager.cpp  SoundManager.h
ege/sysevent/: CMakeLists.txt  SystemEventHandler.cpp  SystemEventHandler.h
ege/syswindow/: CMakeLists.txt  DefaultSystemEventHandler.cpp  DefaultSystemEventHandler.h  SystemWindow.cpp
ege/tilemap/: CMakeLists.txt  ChunkedTileMap2D.cpp  ChunkedTileMap2D.h  FixedChunk.h  FixedTileMap2D.cpp  FixedTileMap2D.h  TileMap2D.cpp  TileMap2D.h
ege/util/: CMakeLists.txt  Color.cpp  Color.h  CommonPaths.cpp  CommonPaths.h  Converter.cpp  Converter.h  Equation.cpp  Equation.h  EquationSystem.cpp  EquationSystem.h  Geometry.h  GlobalConfig.cpp  GlobalConfig.h  JSONConverter.cpp  JSONConverter.h  Math.cpp  Math.h  Matrix.h  OS.h  Object.cpp  Object.h  ObjectArray.cpp  ObjectArray.h  ObjectBoolean.cpp  ObjectBoolean.h  ObjectFloat.cpp  ObjectFloat.h  ObjectInt.cpp  ObjectInt.h  ObjectList.cpp  ObjectList.h  ObjectMap.cpp  ObjectMap.h  ObjectSerializers.cpp  ObjectSerializers.h  ObjectString.cpp  ObjectString.h  ObjectUnsignedInt.cpp  ObjectUnsignedInt.h  (+22 more)
examples/: CMakeLists.txt
examples/complexLoader/: main.cpp
examples/physicalParticleSystem/: main.cpp
examples/physics/: main.cpp
examples/widgets/: main.cpp
(+168 files in other folders)
