add_subdirectory(asyncLoop)
add_subdirectory(controller)
add_subdirectory(debug)
add_subdirectory(egeNetwork)
add_subdirectory(event)
add_subdirectory(game)
add_subdirectory(geometry)
add_subdirectory(gfx)
add_subdirectory(gpo)
add_subdirectory(gui)
add_subdirectory(loop)
add_subdirectory(main)
add_subdirectory(network)
add_subdirectory(profiler)
add_subdirectory(resources)
add_subdirectory(scene)
add_subdirectory(sfml)
add_subdirectory(util)
